--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <a href="#"><img src="images/dataline-logo.png" alt="data line"></a>
             </div>
             <div class="first">
-                <h1>ENTISTÄ PAREMPI VERKKOKAUPPA</h1>
-                <p>Tarjoamme juuri sinulle parhaat verkkokaupparatkaisut kotimaiseen ja kansainväliseen kaupankäyntiin erittäin kilpailukykyisellä hinnalla ja monen vuoden osaamisella.</p>
-                <a href="tel:">SOITA MEILLE</a>
-                <a href="mailto:">LÄHETÄ VIESTI</a>
+                <h1>Better daily routine than ever</h1>
+                <p>At PranaPath, we utilize health data to create personalized models that generate tailored daily routines, dietary plans, and exercise regimens. Our approach considers individual health conditions, ensuring that each plan supports your wellness journey. By merging modern technology with the timeless principles of Ayurveda, we empower you to achieve your health goals with clarity and confidence. Experience a balanced lifestyle designed specifically for you—step onto your path to wellness with PranaPath!</p>
+                <a href="tel:">CALL US</a>
+                <a href="mailto:">SEND A MESSAGE</a>
             </div>
         </header>
         <section>
@@ -28,13 +28,14 @@
             </div>
             <div class="text">
                 <h2>VERKKOKAUPPA YRITYKSELLE</h2>
-                <p>Meille tärkeää on, että pääset nopeasti ja luotettavasti myymään tuotteitasi uudessa verkkokaupassa. Meiltä löytyy kaikki toiminnot, jotka tarvitset menestyvän verkkokaupan ylläpitämiseen ja kehitämme verkkokauppaa paremmaksi yhdessä asiakkaidemme kanssa. Verkkokauppaan on mahdollista myös integroida toiminnanohjausjärjestelmä, kuten esim. Lemonsoft.
+
+                <p>Cellular Insights : At PranaPath, we delve deep into cellular-level information to simulate metabolic pathways influenced by mitochondrial DNA and genetics. Our innovative models allow us to understand how different foods are processed in your body.
                 </p>
-                <p>Verkkokaupat teemme helppokäyttöisellä ja selkeällä ProcessWire-verkkokauppa-alustalla. Datalinen kotisivut ja verkkokauppa sopivat kaikille toimialoille ravintoloista vaatekauppoihin ja urheiluseuroista tukkukauppoihin.
+                <p>Holistic Health Considerations: We take into account vitamin deficiencies and overall health to ensure that our recommendations align with your unique needs. 
                 </p>
-                <p>Teemme verkkosivuja, joista olemme ylpeitä!
+                <p>Wearable Integration: By integrating data from health wearables, we provide precise insights into your well-being, empowering you with personalized dietary plans and exercise routines that support optimal metabolic function.
                 </p>
-                <button>REFERENSSIT</button>
+                <button>References</button>
             </div>
         </section>
         <section class="second">
