--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
                 <img src="images/palvelumme-verkkokaupat-320.webp" alt="palvelumme verkkokaupat">
             </div>
             <div class="text">
-                <h2>VERKKOKAUPPA YRITYKSELLE</h2>
+                <h2>Cellular Insights and Wearable Integration</h2>
 
-                <p>Cellular Insights : At PranaPath, we delve deep into cellular-level information to simulate metabolic pathways influenced by mitochondrial DNA and genetics. Our innovative models allow us to understand how different foods are processed in your body.
+                <p> At PranaPath, we delve deep into cellular-level information to simulate metabolic pathways influenced by mitochondrial DNA and genetics. Our innovative models allow us to understand how different foods are processed in your body.
                 </p>
-                <p>Holistic Health Considerations: We take into account vitamin deficiencies and overall health to ensure that our recommendations align with your unique needs. 
+                <p> We take into account vitamin deficiencies and overall health to ensure that our recommendations align with your unique needs. 
                 </p>
-                <p>Wearable Integration: By integrating data from health wearables, we provide precise insights into your well-being, empowering you with personalized dietary plans and exercise routines that support optimal metabolic function.
+                <p> By integrating data from health wearables, we provide precise insights into your well-being, empowering you with personalized dietary plans and exercise routines that support optimal metabolic function.
                 </p>
                 <button>References</button>
             </div>
@@ -43,10 +43,8 @@
                 <img src="images/palvelumme-urheiluseurat-320.webp" alt="palvelumme urheiluseurat">
             </div>
             <div class="text">
-                <h2>KOTISIVUT URHEILUSEURALLE</h2>
-                <p>Dataline tarjoaa urheiluseuroille monimuotoisen ja helposti päivitettävän urheilualustan. Kattavat perusominaisuudet sisältävät uutiset, joukkuetiedot, videot, kausittaiset ottelut, seuran statiikat, verkkokaupan, aitiovaraukset ja paljon muuta hyödyllistä. Kehitämme sivustoja urheiluseurojen tarpeiden mukaan ja lisäämme vuosittain uusia ominaisuuksia.
-                </p>
-                <p>Kaipaako verkkosivut uudistusta? Ota rohkeasti yhteyttä!
+                <h2>Personalized Dietary Adjustments</h2>
+                <p>At PranaPath, we tailor diet plans based on various factors such as health conditions, stress levels, sleep quality, and supplement intake. We also focus on gut-related issues like SIBO and IBS, ensuring that our recommendations address these concerns holistically. By analyzing your unique health profile, we provide customized solutions that promote better digestion, reduce stress, and enhance overall well-being, creating a balanced lifestyle that suits your individual needs.
                 </p>
             </div>
         </section>
@@ -55,37 +53,37 @@
                 <img src="images/uudet-kumppanit-320.webp" alt="uudet kumppanit">
             </div>
             <div class="text">
-                <h2>PALVELUJA ALIHANKINTANA</h2>
-                <p>Tarvitseeko asiakkaanne verkkosivustoja tai mobiilisovelluksia, mutta se ei ole teidän omaa ydinbisnestänne? Olemme mieluusti kumppaninne, emme kilpailija.</p>
-                <p>Tarjoamme mahdollisuutta yhteistyöhön mm. verkkokaupoissa ja urheilussa. Haemme uusia yhteistyökumppaneita, joille voisimme tarjota tuotteitamme ja palveluitamme reilulla kumppanialennuksella. Vahvuuksiamme ovat kokemus, kilpailukykyiset hinnat, nopeat toimitusajat ja erittäin hyvä asiakaspalvelu.</p>
-                <a href="tel:">SOITA MEILLE</a>
-                <a href="mailto:">LÄHETÄ VIESTI</a>
+                <h2>Comprehensive Health Considerations</h2>
+                <p>At PranaPath, we understand that effective health management requires a holistic approach. Our services consider factors such as inflammation, oxidation, brain fog, and autoimmune conditions. </p>
+                <p>We integrate principles of integrative medicine to craft personalized plans that address not only your dietary needs but also your overall health concerns. This comprehensive perspective allows us to provide targeted recommendations that promote recovery, enhance cognitive function, and support your body's natural healing processes.</p>
+                <a href="tel:">BRAIN FOG</a>
+                <a href="mailto:">INFLAMMATION</a>
             </div>
 
         </section>
         <footer>
-            <h2>YHTEYSTIEDOT</h2>
+            <h2>CONTACT INFORMATION</h2>
             <div class="firma">
-                <h3>Dataline Group Oy</h3>
+                <h3>Bharath and Bookman Associates</h3>
                 <address>
                     <p>
-                    Lehtikuusentie 5,
-                    26100 Rauma
+                    Wyndmoor,
+                    Pennsylvania
                     </p>
-                <p>2354053-6</p>
+                <p>19038</p></p>
             </address>
             </div>
             <div class="info1">
-                <a href="https://tuspe.com/">Timo Anttila</a>
-                <p>Myynti ja toteutukset</p>
-                <a href="tel:+358 40 774 6121">040 774 6121</a>
-                <a href="mailto:info@tuspe.com">info@tuspe.com</a>
+                <a href="https://bharathkumarsampath.netlify.app/">Bharath Kumar Sampath</a>
+                <p>Co-Founder and CEO</p>
+                <a href="tel:+1 484 767 7231">484 767 7231</a>
+                <a href="mailto:bharathkumarsampath.me@gmail.com">bharathkumarsampath.me@gmail.com</a>
             </div>
             <div class="info2">
-                <a href="https://molentum.fi/">Mika Lähteenmäki</a>
-                <p>Myynti ja asiakaspalvelu</p>
+                <a href="https://molentum.fi/">Kyle David Bookman</a>
+                <p>Co-Founder and CFO</p>
                 <a href="tel:+358400 273 150">0400 273 150</a>
-                <a href="mailto:myynti@dataline.fi">myynti@dataline.fi</a>
+                <a href="mailto:kylebookman2988@gmail.com">kylebookman2988@gmail.com</a>
             </div>
         </footer>
     </div>
