--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <img src="images/new5.jpg" alt="">
         </div>
         <header>
-            <div class="logo">
+<!--             <div class="logo">
                 <a href="#"><img src="images/dataline-logo.png" alt="data line"></a>
-            </div>
+            </div> -->
             <div class="first">
                 <h1>Better daily routine than ever</h1>
                 <p>At PranaPath, we utilize health data to create personalized models that generate tailored daily routines, dietary plans, and exercise regimens. Our approach considers individual health conditions, ensuring that each plan supports your wellness journey. By merging modern technology with the timeless principles of Ayurveda, we empower you to achieve your health goals with clarity and confidence. Experience a balanced lifestyle designed specifically for you—step onto your path to wellness with PranaPath!</p>
