--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Dataline</title>
+    <title>PranaPath</title>
 </head>
 <body>
     <div class="cont">
@@ -24,12 +24,12 @@
         </header>
         <section>
             <div class="image">
-                <img src="images/palvelumme-verkkokaupat-320.webp" alt="palvelumme verkkokaupat">
+                <img src="images/palvelumme-verkkokaupat-320.jpg" alt="palvelumme verkkokaupat">
             </div>
             <div class="text">
                 <h2>Cellular Insights and Wearable Integration</h2>
 
-                <p> At PranaPath, we delve deep into cellular-level information to simulate metabolic pathways influenced by mitochondrial DNA and genetics. Our innovative models allow us to understand how different foods are processed in your body.
+                <p> We delve deep into cellular-level information to simulate metabolic pathways influenced by mitochondrial DNA and genetics. Our innovative models allow us to understand how different foods are processed in your body.
                 </p>
                 <p> We take into account vitamin deficiencies and overall health to ensure that our recommendations align with your unique needs. 
                 </p>
@@ -40,21 +40,21 @@
         </section>
         <section class="second">
             <div class="image">
-                <img src="images/palvelumme-urheiluseurat-320.webp" alt="palvelumme urheiluseurat">
+                <img src="images/palvelumme-urheiluseurat-320.png" alt="palvelumme urheiluseurat">
             </div>
             <div class="text">
                 <h2>Personalized Dietary Adjustments</h2>
-                <p>At PranaPath, we tailor diet plans based on various factors such as health conditions, stress levels, sleep quality, and supplement intake. We also focus on gut-related issues like SIBO and IBS, ensuring that our recommendations address these concerns holistically. By analyzing your unique health profile, we provide customized solutions that promote better digestion, reduce stress, and enhance overall well-being, creating a balanced lifestyle that suits your individual needs.
+                <p>We tailor diet plans based on various factors such as health conditions, stress levels, sleep quality, and supplement intake. We also focus on gut-related issues like SIBO and IBS, ensuring that our recommendations address these concerns holistically. By analyzing your unique health profile, we provide customized solutions that promote better digestion, reduce stress, and enhance overall well-being, creating a balanced lifestyle that suits your individual needs.
                 </p>
             </div>
         </section>
         <section class="third">
             <div class="image">
-                <img src="images/uudet-kumppanit-320.webp" alt="uudet kumppanit">
+                <img src="images/uudet-kumppanit-320.png" alt="uudet kumppanit">
             </div>
             <div class="text">
                 <h2>Comprehensive Health Considerations</h2>
-                <p>At PranaPath, we understand that effective health management requires a holistic approach. Our services consider factors such as inflammation, oxidation, brain fog, and autoimmune conditions. </p>
+                <p>We understand that effective health management requires a holistic approach. Our services consider factors such as inflammation, oxidation, brain fog, and autoimmune conditions. </p>
                 <p>We integrate principles of integrative medicine to craft personalized plans that address not only your dietary needs but also your overall health concerns. This comprehensive perspective allows us to provide targeted recommendations that promote recovery, enhance cognitive function, and support your body's natural healing processes.</p>
                 <a href="tel:">BRAIN FOG</a>
                 <a href="mailto:">INFLAMMATION</a>
