--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
     <title>PranaPath</title>
 </head>
 <body>
@@ -16,10 +17,10 @@
                 <a href="#"><img src="images/dataline-logo.png" alt="data line"></a>
             </div>
             <div class="first">
-                <h1 style="color:#200c08;">Better daily routine than ever</h1>
-                <p style="color:#200c08;">We utilize health data to create personalized models that generate tailored daily routines, dietary plans, and exercise regimens. Our approach considers individual health conditions, ensuring that each plan supports your wellness journey. By merging modern technology with the timeless principles of Ayurveda, we empower you to achieve your health goals with clarity and confidence. Experience a balanced lifestyle designed specifically for you—step onto your path to wellness with PranaPath!</p>
-                <a href="tel:">CALL US</a>
-                <a href="mailto:">SEND A MESSAGE</a>
+                <h1 style="color:#f7f5f4;">Better daily routine than ever</h1>
+                <p style="color:#200c08;"><strong>We utilize health data to create personalized models that generate tailored daily routines, dietary plans, and exercise regimens. Our approach considers individual health conditions, ensuring that each plan supports your wellness journey. By merging modern technology with the timeless principles of Ayurveda, we empower you to achieve your health goals with clarity and confidence. Experience a balanced lifestyle designed specifically for you—step onto your path to wellness with PranaPath!</strong></p>
+                <a href="tel:+1 4847677231">CALL US</a>
+                <a href="mailto:bharathkumarsampath.me@gmail.com">SEND A MESSAGE</a>
             </div>
         </header>
         <section>
@@ -35,7 +36,7 @@
                 </p>
                 <p> By integrating data from health wearables, we provide precise insights into your well-being, empowering you with personalized dietary plans and exercise routines that support optimal metabolic function.
                 </p>
-                <button>References</button>
+                <button onclick="window.open('https://www.cambridge.org/core/journals/british-journal-of-nutrition/article/diets-nutrients-genes-and-the-microbiome-recent-advances-in-personalised-nutrition/8D623DF612071485B4AD712F4D59EA33', '_blank')">References</button>
             </div>
         </section>
         <section class="second">
@@ -75,15 +76,15 @@
             </div>
             <div class="info1">
                 <a href="https://bharathkumarsampath.netlify.app/">Bharath Kumar Sampath</a>
-                <p>Co-Founder and CEO</p>
+                <p>Data Analyst</p>
                 <a href="tel:+1 484 767 7231">484 767 7231</a>
                 <a href="mailto:bharathkumarsampath.me@gmail.com">bharathkumarsampath.me@gmail.com</a>
             </div>
             <div class="info2">
                 <a href="https://molentum.fi/">Kyle David Bookman</a>
-                <p>Co-Founder and CFO</p>
-                <a href="tel:+358400 273 150">0400 273 150</a>
-                <a href="mailto:kylebookman2988@gmail.com">kylebookman2988@gmail.com</a>
+                <p>Strategy</p>
+                <a href="tel:+358400 273 150">400 273 1500</a>
+                <a href="mailto:kyledavidbookman@gmail.com">kyledavidbookman@gmail.com</a>
             </div>
         </footer>
     </div>
