--- a/index.html
+++ b/index.html
@@ -57,10 +57,9 @@
                 <h2>Comprehensive Health Considerations</h2>
                 <p>We understand that effective health management requires a holistic approach. Our services consider factors such as inflammation, oxidation, brain fog, and autoimmune conditions. </p>
                 <p>We integrate principles of integrative medicine to craft personalized plans that address not only your dietary needs but also your overall health concerns. This comprehensive perspective allows us to provide targeted recommendations that promote recovery, enhance cognitive function, and support your body's natural healing processes.</p>
-                <a href="tel:">BRAIN FOG</a>
-                <a href="mailto:">INFLAMMATION</a>
+                <a href="https://en.wikipedia.org/wiki/Brain_fog" target="_blank">BRAIN FOG</a> <!-- Link to Brain Fog Wikipedia page -->
+                <a href="https://en.wikipedia.org/wiki/Inflammation" target="_blank">INFLAMMATION</a> <!-- Link to Inflammation Wikipedia page -->
             </div>
-
         </section>
         <footer>
             <h2>CONTACT INFORMATION</h2>
